bug squashing

--- a/client/stylesheets/layout.scss
+++ b/client/stylesheets/layout.scss
@@ -157,7 +157,7 @@ body {
 
 .post-list {
   overflow: scroll;
-  max-height: 30em;
+  max-height: 25em;
 }
 
 .profile, .browse, .messenger {
